update ui fixed alignment issues

--- a/Frontend/src/app/agent-desk-settings/agent-desk-settings.component.scss
+++ b/Frontend/src/app/agent-desk-settings/agent-desk-settings.component.scss
@@ -7,7 +7,9 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
+.panel-page-content {
+  padding: 30px 0 0 30px;
+}
 .service-trigger {
   background: #25afcb;
   color: #ffffff;
